--- a/package.json
+++ b/package.json
@@ -72,7 +72,10 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
+  "overrides": {
+    "next": "15.2.4"
+  },
   "engines": {
-    "node": ">=18.18.0"
+    "node": "18.x"
   }
 }
